--- a/firstProject/index.html
+++ b/firstProject/index.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>CSS знайомство</title>
+        <link rel="stylesheet" href="css/style.css">
 
     </head>
     <body>
+        <h1>
+            Знайомство з новою зброєю
+        </h1>
+            <p class="">
+                Loren ipsum dolor sit amet, consectetur adipisicing
+                adipisicing elit.
+            </p>
+        <h2>
+            <p class="">
+                Loren ipsum
+            </p>
+        </h2>
         
     </body>
     
