--- a/firstProject/index.html
+++ b/firstProject/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>
-            Знайомство з новою зброєю
+            Знайомство 
         </h1>
             <p class="">
                 Loren ipsum dolor sit amet, consectetur adipisicing
