--- a/firstProject/index.html
+++ b/firstProject/index.html
@@ -1,24 +1,84 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>CSS знайомство</title>
-        <link rel="stylesheet" href="css/style.css">
 
-    </head>
-    <body>
-        <h1>
-            Знайомство 
-        </h1>
-            <p class="">
-                Loren ipsum dolor sit amet, consectetur adipisicing
-                adipisicing elit.
-            </p>
-        <h2>
-            <p class="">
-                Loren ipsum
-            </p>
-        </h2>
-        
-    </body>
-    
+<head>
+    <meta charset="UTF-8" />
+    <title>My first page</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+    <h1>
+        Знайомство
+    </h1>
+    <p class="">
+        Loren ipsum dolor sit amet, consectetur adipisicing
+        adipisicing elit.
+    </p>
+    <h2>
+        <p class="">
+            Loren ipsum
+        </p>
+    </h2>
+    <ol>
+        <li>Текст</li>
+        <li>Текст</li>
+        <li>Текст</li>
+    </ol>
+    <ul>
+        <li>Текст</li>
+        <li>Текст</li>
+        <li>Текст</li>
+    </ul>
+    <ol>
+        <li>
+            <ul>
+                <li>Текст</li>
+                <li>Текст</li>
+                <li>Текст</li>
+            </ul>
+        </li>
+    </ol>
+    <form name="" action="" method="">
+        <input type="text" placeholder="Логін">
+        <input type="password" placeholder="Пароль">
+        <textarea placeholder="Ваше повідомлення"> </textarea>
+        <input type="submit" value="Надіслати">
+    </form>
+    <table>
+        <caption>Заголовок таблиці</caption>
+        <thead>
+            <tr>
+                <th>Заголовок</th>
+                <th>Заголовок</th>
+                <th>Заголовок</th>
+                <th>Заголовок</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Текст</td>
+                <td>Текст</td>
+                <td>Текст</td>
+                <td>Текст</td>
+            </tr>
+            <tr>
+                <td>Текст</td>
+                <td>Текст</td>
+                <td>Текст</td>
+                <td>Текст</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td>Текст</td>
+                <td>Текст</td>
+                <td>Текст</td>
+                <td>Текст</td>
+            </tr>
+        </tfoot>
+    </table>
+
+</body>
+
 </html>
