--- a/Projects/HW3/index.html
+++ b/Projects/HW3/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="UTF-8" />
-    <title>Third homework</title>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Third homework</title>
     <link rel="stylesheet" href="css/style.css">
-</head>
+    </head>
+    <body>
+    <header>
+       <!-- <link rel="conactForm" href="ContactFotm.html"/>-->
+        <img src="image/header.png" alt="header" height="200">
 
-<body>
+    </header>
+    <main>
+        <ul>
+            <li><a href="http://lits.ua"LITS Academy></a></li>
+            <li><a href="http://lits.ua/cities"LITS Cities target="_blank"></a></li>
+        </ul>
+    </main>
+<footer>
 
+</footer>
 
 </body>
 
