--- a/Projects/workOnLessons/main.html
+++ b/Projects/workOnLessons/main.html
@@ -50,8 +50,34 @@
             <button type='submit'>OK</button>
             <button type='reset'>Camcel</button>
         </form>
+
+        <!--Aside-->
+        <aside>
+            <ul>
+                <li><a href="profile.html">Профіль</a></li>
+                <li><a href="order.html">Замовлення</a></li>
+            </ul>
+        </aside>
+        <section id='filters'>
+            <ul>
+                <li>Смартфон</li>
+            </ul>
+        </section>
+        <section id='product'>
+            <article class='product'>
+                <section class='prewiew'></section>
+            </article>
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+        <ul>
+            <li><a href="about.html">About US</a></li>
+            <li><a href="support.html">Support</a></li>
+        </ul>
+        <p>
+
+        </p>
+    </footer>
 </body>
 
 </html>
