--- a/Projects/workOnLessons/signup.html
+++ b/Projects/workOnLessons/signup.html
@@ -22,7 +22,7 @@
         <form>
             <div>
                 <label></label>
-                <input
+                <input/>
             </div>
             <input type='text' required />
             <input type='email' required />
@@ -31,7 +31,7 @@
                 <option value="W">Woman</option>
             </select>
 
-            <input type='radio' name=""
+            <input type='radio' name="">
 
             <!--Actions-->
             <button type='submit'>OK</button>
