--- a/Projects/workOnLessons/main.html
+++ b/Projects/workOnLessons/main.html
@@ -2,55 +2,30 @@
 
 <head>
     <title>LITS Магазин</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta name='viewport' content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href='styles/product.css' />
+    <link rel='stylesheet' href='styles/theme.css' />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <!-- <link rel='stylesheet' href='styles/normalize.css' /> -->
 </head>
 
 <body>
     <header>
-        <button>Додатково</button>
-        <article>
-            <img src='img/LITS_logo.png' width="200" height="100" alt="logo LITS">
+        <article class="header__left-panel">
+            <span role="button" class="material-icons icon icon-light" aria-label="Відкрити меню">menu</span>
+            <img class="header__logo" src='img/LITS_logo.png' width="100" height="50" alt="logo LITS">
         </article>
-        <article>
-            <input type='search'>
-            <button>Знайти</button>
+        <article class="header__main-panel">
+            <article class="header__search-bar">
+                <input type='search' placeholder="Введіть назву чи тип товару">
+                <button class='btn-primary'>Знайти</button>
+            </article>
         </article>
-        <article>
-            <button>Коризина</button>
-        </article>
+        <article class="header__right-panel">
+            <span role="button" class="material-icons icon icon-light"
+                aria-label="Відкрити корзину">shopping_cart</span>
     </header>
     <main>
-        <form>
-            <div>
-                <label for='input_email'>Name</label>
-                <input type='text' name='name' required id='input_name' />
-            </div>
-
-            <div>
-                <label for='input_name'>Email</label>
-                <input type='email' name='email' required id='input_email' />
-            </div>
-
-            <div>
-                <label for='input_age'>Age</label>
-                <input type='number' name='age' required id='input_age' />
-            </div>
-            <div>
-                <label for='combobox_m_f'>Sex</label>
-                <select name='m_f' required>
-                    <option value="M">M</option>
-                    <option value="F">F</option>
-                </select>
-            </div>
-
-            <input type="radio" name='resident' value="Ukraine" />
-            <input type="radio" name='resident' value="EU" />
-
-            <!--Actions-->
-            <button type='submit'>OK</button>
-            <button type='reset'>Camcel</button>
-        </form>
-
         <!--Aside-->
         <aside>
             <ul>
@@ -60,13 +35,45 @@
         </aside>
         <section id='filters'>
             <ul>
-                <li>Смартфон</li>
+                <li><a>Смартфон</a></li>
+                <li><a>Побутова техніка</a></li>
             </ul>
         </section>
-        <section id='product'>
-            <article class='product'>
-                <section class='prewiew'></section>
+        <section id='products'>
+            <article class='main__product' role='button'>
+                <section class='main__preview'>
+                    <img class="main__preview-img" src='img/front-back.jpg' width="100" height="150">
+                </section>
+                <section class='main__details'>
+                    <p class='main__type'>Тип</p>
+                    <p class='main__model'>Модель</p>
+                    <p class="main__info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex nemo quasi veniam
+                        pariatur in quisquam consequuntur molestias deleniti alias dolore tenetur praesentium,
+                        distinctio sequi reprehenderit consectetur, esse eligendi libero! Aperiam? </p>
+                </section>
+                <section class="main__actions">
+                    <button class="btn-primary"> Замовити</button>
+                    <p class='main__price'> 2222грн</p>
+                </section>
             </article>
+
+            <article class='main__product' role='button'>
+                <section class='main__preview'>
+                    <img class="main__preview-img" src='img/front-back.jpg' width="100" height="150">
+                </section>
+                <section class='main__details'>
+                    <p class='main__type'>Тип</p>
+                    <p class='main__model'>Модель</p>
+                    <p class="main__info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex nemo quasi veniam
+                        pariatur in quisquam consequuntur molestias deleniti alias dolore tenetur praesentium,
+                        distinctio sequi reprehenderit consectetur, esse eligendi libero! Aperiam? </p>
+                </section>
+                <section class="main__actions">
+                    <button class="btn-primary"> Замовити</button>
+                    <p class='main__price'> 2222грн</p>
+                </section>
+            </article>
+
         </section>
     </main>
     <footer>
@@ -74,9 +81,7 @@
             <li><a href="about.html">About US</a></li>
             <li><a href="support.html">Support</a></li>
         </ul>
-        <p>
-
-        </p>
+        <p>Copyright Lits Scool 2021 </p>
     </footer>
 </body>
 
