--- a/Projects/workOnLessons/signup.html
+++ b/Projects/workOnLessons/signup.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-
 <head>
     <title>LITS Магазин</title>
 </head>
-
 <body>
     <header>
         <button>Додатково</button>
         <article>
-            <img src='img/LITS_logo.png' width="200" height="100" alt="logo LITS">
+            <img src='img/LITS_logo.png' width="100" height="50" alt="logo LITS">
         </article>
         <article>
             <input type='search'>
@@ -21,7 +19,7 @@
     <main>
         <form>
             <div>
-                <label></label>
+                <label for='input_name' class='some_label_another_class'>Ім'я</label>
                 <input/>
             </div>
             <input type='text' required />
