--- a/Projects/workOnLessons/main.html
+++ b/Projects/workOnLessons/main.html
@@ -3,10 +3,12 @@
 <head>
     <title>LITS Магазин</title>
     <meta name='viewport' content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href='styles/product.css' />
-    <link rel='stylesheet' href='styles/theme.css' />
+    <!--link rel="stylesheet" href='styles/product.css' -->
+    <!--link rel='stylesheet' href='styles/theme.css' /-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <!-- <link rel='stylesheet' href='styles/normalize.css' /> -->
+    <link rel="stylesheet/less" type="text/css" href="styles/theme/index.less" />
+    <link rel="stylesheet/less" type="text/css" href="styles/product.less" />
+    <script src="https://cdn.jsdelivr.net/npm/less@4.1.1"></script>
 </head>
 
 <body>
@@ -18,7 +20,8 @@
         <article class="header__main-panel">
             <article class="header__search-bar">
                 <input type='search' placeholder="Введіть назву чи тип товару">
-                <button class='btn-primary'>Знайти</button>
+                <span type='button_search' role="button" class="material-icons icon icon-light" aria-label="Знайти">
+                    search </span>
             </article>
         </article>
         <article class="header__right-panel">
@@ -73,7 +76,10 @@
                     <p class='main__price'> 2222грн</p>
                 </section>
             </article>
-
+            <!--div for animarion-->
+            <div class="main__container">
+                <div class="main__inner">Greencubator</div>
+            </div>
         </section>
     </main>
     <footer>
