--- a/Projects/HWProject/index.html
+++ b/Projects/HWProject/index.html
@@ -3,9 +3,11 @@
 
 <head>
     <title>Third homework</title>
-    <meta charset="UTF-8" />
+    <meta name="charset" content="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script type="application/javascript" src="scripts/sctript.js"></script>
+    
 </head>
 
 <body>
