--- a/Projects/HWProject/index.html
+++ b/Projects/HWProject/index.html
@@ -2,11 +2,12 @@
 <html>
 
 <head>
-    <title>Third homework</title>
+    <title>Some homework</title>
     <meta name="charset" content="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script type="application/javascript" src="scripts/sctript.js"></script>
+    <script type='application/javascript' src="scripts/scriptHWchanging.js"></script>
     
 </head>
 
