--- a/Projects/workOnLessons/main.html
+++ b/Projects/workOnLessons/main.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet/less" type="text/css" href="styles/theme/index.less" />
     <link rel="stylesheet/less" type="text/css" href="styles/product.less" />
     <script src="https://cdn.jsdelivr.net/npm/less@4.1.1"></script>
+    <script src="/Projects/workOnLessons/script.js"></script>
 </head>
 
 <body>
