--- a/siteForGraduate/index.html
+++ b/siteForGraduate/index.html
@@ -6,9 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VisitToUkraine</title>
+
+    <!--Normalize Style-->
+    <link rel='stylesheet' href='./styles/normalize.css'>
+    <!--Font Icons-->
+    <link rel='stylesheet' href='./styles/all.css'>
     <!--Custom style-->
-    <link rel='stylecheet' href='./styles/normalize.css'>
     <link rel='stylesheet' href='./styles/index.css'>
+
 
 
 </head>
@@ -22,24 +27,24 @@
             </div>
             <div>
                 <ul class="nav-items">
-                <li class="nav-link">
-                    <a href="#">Home</a>
-                </li>
-                <li class="nav-link">
-                    <a href="#">Category</a>
-                </li>
-                <li class="nav-link">
-                    <a href="#">Activities</a>
-                </li>
-                <li class="nav-link">
-                    <a href="#">Contact US</a>
-                </li>
-            </ul>
+                    <li class="nav-link">
+                        <a href="#">Home</a>
+                    </li>
+                    <li class="nav-link">
+                        <a href="#">Category</a>
+                    </li>
+                    <li class="nav-link">
+                        <a href="#">Activities</a>
+                    </li>
+                    <li class="nav-link">
+                        <a href="#">Contact US</a>
+                    </li>
+                </ul>
             </div>
             <div class="social text-gray">
-                <a href='#'>FB</a>
-                <a href='#'>I</a>
-                <a href='#'>Y</a>
+                <a href='#'><i class="fab fa-facebook-f"></i></a>
+                <a href='#'><i class="fab fa-instagram"></i></a>
+                <a href='#'><i class="fab fa-youtube"></i></a>
             </div>
         </div>
     </nav>
