--- a/Projects/myProjectResultEducation/index.html
+++ b/Projects/myProjectResultEducation/index.html
@@ -5,9 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.less">
-    <title> My WebSite</title>
+    <title> Visit to Ukraine</title>
 </head>
 <body>
+    <!--Animation preloader-->
+    <h1>Visi</h1>
+
     <!--Hero Section-->
 <section id="hero">
     <div class="hero container">
