--- a/siteForGraduate/index.html
+++ b/siteForGraduate/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VisitToUkraine</title>
     <!--Preloader animaton-->
-    <!-- <link href="https://fonts.googleapis.com/css?family=Lato:700&display=swap" rel="stylesheet">
-    <link rel='stylesheet' href="./styles/preloader.css">
- -->
+    <!--  <link href="https://fonts.googleapis.com/css?family=Lato:700&display=swap" rel="stylesheet">
+    <link rel='stylesheet' href="./styles/preloader.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--Normalize Style-->
     <link rel='stylesheet' href='./styles/normalize.css'>
     <!--Font Icons-->
@@ -19,69 +19,59 @@
 </head>
 
 <body>
-
-    <!--Naviration-->
-    <nav class="nav">
-        <div class="nav-menu flex-row">
-            <div class="nav-brand">
-                <a href="#" class="text-gray">Visit to Ukraine</a>
-            </div>
-            <div class="toggle-collapse">
-                <div class="toggle-icons">
-                    <i class="fas fa-bars"></i>
+    <!--Preloader-->
+    <div class="loader"><img src="./images/loading.gif" alt="preloader"></div>
+    <header>
+        <!--Naviration-->
+        <nav class="nav">
+                 <a href="#" class="nav-brand">Visit to Ukraine</a>
+                <div>
+                    <ul class="nav-menu">
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Category</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Activities</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Contact US</a>
+                        </li>
+                    </ul>
                 </div>
-            </div>
-            <div>
-                <ul class="nav-items">
-                    <li class="nav-link">
-                        <a href="#">Home</a>
-                    </li>
-                    <li class="nav-link">
-                        <a href="#">Category</a>
-                    </li>
-                    <li class="nav-link">
-                        <a href="#">Activities</a>
-                    </li>
-                    <li class="nav-link">
-                        <a href="#">Contact US</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="social text-gray">
-                <a href='#'><i class="fab fa-facebook-f"></i></a>
-                <a href='#'><i class="fab fa-instagram"></i></a>
-                <a href='#'><i class="fab fa-youtube"></i></a>
-            </div>
-        </div>
-    </nav>
+                <div class="social">
+                    <a href='#'><i class="fab fa-facebook-f"></i></a>
+                    <a href='#'><i class="fab fa-instagram"></i></a>
+                    <a href='#'><i class="fab fa-youtube"></i></a>
+                </div>
+                <div class="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
+        </nav>
+    </header>
     <!--EndNavigation-->
-
-    <!--HW Position-->
-    <div id='position'>
-        <h1 id='status'></h1>
-        <button id='find-state'>Find My State</button>
-    </div>
-    <script src="./scripts/geoscript.js"></script>
-
     <!-- Main Site Secion  -->
     <main>
         <!--Site Title-->
-<!--         <section class="site-title">
+        <section class="site-title">
             <div class="site-background">
                 <h3> Tours and Travels </h3>
                 <h1> We get to know Ukraine Together</h1>
                 <button class="btn">Explore</button>
             </div>
-        </section> -->
+        </section>
     </main>
     <!--end main section-->
+    <!--   <script src='./scripts/main.js'></script> -->
+    <!--AnimNav-->
+    <script src='./scripts/preloader.js'></script>
+    <script src='./scripts/animNav.js'></script>
 
-
-
-<!-- 
-
-    <script src='./scripts/main.js'></script>
- -->
 </body>
 
 </html>
