--- a/Projects/HWforScript/index.html
+++ b/Projects/HWforScript/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OOP</title> 
        
-    <script type="module" src="./script.js"></script>       
+    <!-- <script type="module" src="./script.js"></script>  -->
+    <script type="module" src="./jsHW26.js"></script>       
+</head>       
 </head> 
 <body>
     
